--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Cool Project 1</h1>
     <h2>Here are the list of things in the project</h2>
+    <h3>Hello What's up!</h3>
 </body>
 </html>
